repalce newInstance to getDeclaredConstructor.newInstance